--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "8.-nasa-project",
+  "name": "nasa-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "",
   "scripts": {
     "install-server" : "npm install --prefix server",
     "install-client" : "npm install --prefix client",
@@ -17,7 +18,6 @@
     "test" : "npm test --prefix server && npm test --prefix client"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "louis23412",
+  "license": "ISC"
 }
