--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
