--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -9,17 +9,25 @@ on :
 
 jobs :
   build :
+    env :
+      CI : true
+
+    strategy:
+      matrix :
+        node-version : [22.x, 23.x]
+
     runs-on : ubuntu-latest
+
     steps :
       - uses : actions/checkout@v3
 
-      - name : Use Node.js version 23
+      - name : Use Node.js version ${{ matrix.node-version }}
         uses : actions/setup-node@v3
         with :
-          node-version : '23'
+          node-version : ${{ matrix.node-version }}
       
       - run :  npm install
 
       - run : npm run build --prefix client
 
-      # - run : npm run build --prefix server
+      - run : npm test
