--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -11,10 +11,12 @@ jobs :
   build :
     env :
       CI : true
+      MONGO_URL : mongodb://localhost/nasa
 
     strategy:
       matrix :
-        node-version : [21.x, 22.x]
+        node-version : [ 21.x, 22.x ]
+        mongodb-version : ['4.4']
 
     runs-on : ubuntu-latest
 
@@ -25,6 +27,11 @@ jobs :
         uses : actions/setup-node@v3
         with :
           node-version : ${{ matrix.node-version }}
+
+      - name : Use MongoDB from Github actions
+        uses : supercharge/mongodb-github-action@1.6.0
+        with :
+          mongodb-version : ${{ matrix.mongodb-version }}
       
       - run :  npm install
 
